<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_start"
        android:textSize="50dp"
        android:textColor="@color/orange"
        android:layout_gravity="top"
        android:gravity="center"
        android:background="@color/sky_blue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:weightSum="1">
        <Button
            android:id="@+id/start1"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/anfu"
            android:textColor="@color/red"
            android:textSize="25dp"/>
        <Button
            android:id="@+id/start2"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/pengnan"
            android:textSize="25dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/start_bus"
        android:textSize="30dp"
        android:textColor="@color/sky_blue"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/yellow"/>

    <TextView
        android:id="@+id/todayMoney"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/todayIncome"
        android:textSize="20dp" />
</LinearLayout>
