<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sssz.buscheck.CheckPassanger"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:weightSum="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/addPassanger"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/add_passanger"
            android:textSize="20dp"
            android:textColor="@color/red"/>
        <Button
            android:id="@+id/finish"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/finish"
            android:textSize="20dp"
            android:textColor="@color/orange"/>
    </LinearLayout>

    <ListView
        android:id="@+id/passangers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"/>
    <TextView
        android:id="@+id/currentMoney"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="@color/blue"
        android:background="@color/pink"/>
</LinearLayout>
