<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sssz.buscheck.AddPassanger"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:id="@+id/addPassangerStart"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:text="@string/anfu"
            android:textColor="@color/red"
            android:gravity="center"
            android:background="@color/orange"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
            android:src="@drawable/dir"/>
        <TextView
            android:id="@+id/addPassangerEnd"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:text="@string/pengnan"
            android:textColor="@color/red"
            android:gravity="center"
            android:background="@color/blue"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:background="@color/sky_blue">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="@string/price"
                android:gravity="center"/>
            <TextView
                android:id="@+id/addPassangerPrice"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="0"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="@string/num"
                android:gravity="center"/>

            <TextView
                android:id="@+id/addPassangerNum"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/red"
                android:gravity="center"
                android:text="0" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:weightSum="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="@string/shouldGet"
                android:gravity="center"/>
            <TextView
                android:id="@+id/addPassangerShould"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="0"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:background="@color/green">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/handIn" />

            <TextView
                android:id="@+id/addPassangerIn"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="0"
                android:background="@color/red"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="@string/handOut"
                android:gravity="center"/>
            <TextView
                android:id="@+id/addPassangerOut"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="0"
                android:background="@color/red"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:weightSum="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="@string/realGet"
                android:gravity="center"/>
            <TextView
                android:id="@+id/addPassangerReal"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="0"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"/>
    </LinearLayout>
    <Button
        android:id="@+id/addPassangerFinish"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:text="@string/addFinish"
        android:textColor="@color/pink"
        android:textSize="30dp"
        android:textStyle="bold"/>
</LinearLayout>
