<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="50dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49.5dp">
        <TextView
            android:id="@+id/up"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:text="始发地"
            android:gravity="center"
            android:background="@color/orange" />
        <ImageView
            android:id="@+id/arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="12.5dp"
            android:layout_toRightOf="@+id/up"
            android:src="@drawable/dir"/>
        <TextView
            android:id="@+id/down"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:text="到达地"
            android:layout_toRightOf="@+id/arrow"
            android:gravity="center"
            android:background="@color/blue" />

        <TextView
            android:id="@+id/priceTv"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:text="@string/price"
            android:layout_toRightOf="@+id/down"
            android:gravity="center"/>
        <TextView
            android:id="@+id/price"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@+id/down"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="3"/>


        <TextView
            android:id="@+id/numTv"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:text="@string/num"
            android:layout_toRightOf="@+id/price"
            android:gravity="center"/>
        <TextView
            android:id="@+id/num"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@+id/price"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="2"/>
        <TextView
            android:id="@+id/shouldTv"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:text="@string/shouldGet"
            android:layout_toRightOf="@+id/num"
            android:gravity="center"/>
        <TextView
            android:id="@+id/shouldGet"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@+id/num"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="6"/>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/shouldGet"
            android:layout_marginLeft="2.5dp"
            android:background="@color/red"/>
        <TextView
            android:id="@+id/handInTv"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:text="@string/handIn"
            android:layout_toRightOf="@+id/shouldGet"
            android:gravity="center"/>
        <TextView
            android:id="@+id/handIn"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@+id/shouldGet"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="10"/>
        <TextView
            android:id="@+id/handOutTv"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:text="@string/handOut"
            android:layout_toRightOf="@+id/handIn"
            android:gravity="center"/>
        <TextView
            android:id="@+id/handOut"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@+id/handIn"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="4"/>
        <TextView
            android:id="@+id/realGetTv"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:text="@string/realGet"
            android:textColor="@color/green"
            android:layout_toRightOf="@+id/handOut"
            android:gravity="center"/>
        <TextView
            android:id="@+id/realGet"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@+id/handOut"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="4"
            android:textColor="@color/green"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"/>
</LinearLayout>